<resources>
    <string name="app_name">QUẢN LÝ CHI TIÊU CÁ NHÂN</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="transaction">Sổ giao dịch</string>
    <string name="report">Báo cáo</string>
    <string name="add">Thêm giao dịch</string>
    <string name="plan">Lập kế hoạch</string>
    <string name="account">Tài khoản</string>
    <string name="wallet">Ví của tôi</string>
    <string name="group">Nhóm</string>
    <string name="tools">Công cụ</string>
    <string name="setting">Cài đặt</string>
    <string name="help">Hỗ trợ</string>
    <string name="about">Giới thiệu</string>


</resources>
