<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_account"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_account"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="50dp"

                android:onClick="onClick_img_account"

                android:src="@drawable/ic_launcher_foreground"

                tools:ignore="OnClick" />


                <LinearLayout
                    android:id="@+id/group"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"

                    android:onClick="onClick_group"

                    android:orientation="horizontal"
                    android:paddingLeft="15dp"

                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:src="@drawable/ic_group_foreground" />

                    <Button
                        android:id="@+id/bt_group"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"



                        android:background="#00FFFFFF"

                        android:hint="@string/group"
                        android:gravity="left|center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tool"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"

                    android:onClick="onClick_tool"

                    android:orientation="horizontal"
                    android:paddingLeft="15dp"

                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:src="@drawable/ic_tool_foreground" />

                    <Button
                        android:id="@+id/bt_tool"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:background="#00FFFFFF"

                        android:hint="@string/tools"
                        android:gravity="left|center"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"

                    android:fontFamily="sans-serif-smallcaps"

                    android:gravity="center"
                    android:text="_______________________________________" />

                <LinearLayout
                    android:id="@+id/setting"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"

                    android:onClick="onClick_setting"

                    android:orientation="horizontal"
                    android:paddingLeft="15dp"

                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:src="@drawable/ic_setting_foreground" />

                    <Button
                        android:id="@+id/bt_setting"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:background="#00FFFFFF"

                        android:hint="@string/setting"
                        android:gravity="left|center"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"

                    android:fontFamily="sans-serif-smallcaps"

                    android:gravity="center"
                    android:text="_______________________________________" />

                <LinearLayout
                    android:id="@+id/help"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"

                    android:onClick="onClick_help"

                    android:orientation="horizontal"
                    android:paddingLeft="15dp"

                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:src="@drawable/ic_help_foreground" />

                    <Button
                        android:id="@+id/bt_help"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:background="#00FFFFFF"

                        android:hint="@string/help"
                        android:gravity="left|center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/about"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"

                    android:onClick="onClick_about"

                    android:orientation="horizontal"
                    android:paddingLeft="15dp"

                    tools:ignore="OnClick">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:src="@drawable/ic_about_foreground" />

                    <Button
                        android:id="@+id/bt_about"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"

                        android:background="#00FFFFFF"

                        android:hint="@string/about"
                        android:gravity="left|center"/>
                </LinearLayout>
            </LinearLayout>
            <include layout="@layout/layout_bottom_navigation_view"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>